2008-01-10  Samuel Tardieu  <tardieu@gostai.com>

	Tentative mipsel fix.
	* sched.cc: Include unistd.h if available for usleep().

2008-01-08  Akim Demaille  <demaille@gostai.com>

	utime_t.
	* utime.cc: Here again.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	Use utime_t.
	* utime.cc: here.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	reheader.
	* assert.hh,
	* cli.hh,
	* detect_win32.h,
	* exception.hh,
	* file-system.hh,
	* fwd.hh,
	* lockable.hh,
	* network.h,
	* package-info.hh,
	* program-name.hh,
	* sched.hh,
	* semaphore.hh,
	* shared-ptr.hh,
	* sysexits.hh,
	* thread.hh,
	* uffloat.hh,
	* ufloat.hh,
	* ull-fixed-point.hh,
	* ulong-fixed-point.hh,
	* unistd.h:
	Fix cpp guards.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	Remove check-local.
	* tests/Makefile.am: here.
	Now it's check-buildfarm that hooks it.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	Clean the check targets.
	* Makefile.am (check-local): Rename as...
	(maintainer-check): this, so that it doesn't trigger too often
	(in particular in the kernel).
	* tests/test-shared-ptr.cc: New.
	* tests/Makefile.am: Adjust.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Include cstring to get memset().
	* sched.cc: <cstring> is needed for memset to be visible.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	Use if defined with config.h.
	This is not just a matter of style.  We already have been bitten
	by not using the "defined" part.
	* sched.cc: here.
	Also, use #elif, not #elsif.

2008-01-07  Matthieu Nottale  <nottale@gostai.com>

	Conditionaly include sys/mman.h.
	* sched.cc: Here.

2008-01-07  Matthieu Nottale  <nottale@gostai.com>

	sched: fallback to setpriority if sched_setscheduler unavailable.
	* sched.cc: Use setpriority if !sched_setscheduler. Also
	 call mlockall in all cases if available. Call lockstack in
	 all cases.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	sched.hh.
	* sched.hh, sched.cc: New.
	* Makefile.am, libport-sources.mk: Adjust.
