@@ -6,9 +6,6 @@
 #if defined LIBPORT_HAVE_SCHED_H
 # include "sched.h"
 #endif
-#if defined LIBPORT_HAVE_UNISTD_H
-# include "unistd.h"
-#endif
 #if defined LIBPORT_HAVE_SYS_RESOURCE_H
 # include "sys/resource.h"
 #endif
@@ -25,6 +22,7 @@ namespace libport
   int
   sched_estimate_granularity()
   {
+#ifndef OPENR
     //evaluate scheduler granularity
     utime_t mind = 1000000000;
     for (int i=0; i<10;i++)
@@ -40,6 +38,9 @@ namespace libport
     if ((mind/1000 + 1) * 1000 - mind < 100)
       mind = (mind/1000 + 1) * 1000;
     return mind;
+#else
+    return 0;
+#endif /* OPENR */
   }
 
   namespace
